cmake_minimum_required(VERSION 3.16.0 FATAL_ERROR)

project(Game01 C CXX)

################################################################################
# Output directory
################################################################################

################################################################################
# Common utils
################################################################################
include(CMake/Utils.cmake)

################################################################################
# Additional Global Settings(add specific info there)
################################################################################
include(CMake/GlobalSettingsInclude.cmake OPTIONAL)

################################################################################
# Use solution folders feature
################################################################################
set_property(GLOBAL PROPERTY USE_FOLDERS ON)

################################################################################
# Sub-projects
################################################################################
add_subdirectory(CryCommon)
add_subdirectory(CrySystem)
