add_subdirectory(Cry3DEngine)
add_subdirectory(CryAISystem)
add_subdirectory(CryAnimation)
add_subdirectory(CryEntitySystem)
add_subdirectory(CryFont)
add_subdirectory(CryGame)
if (MSVC)
add_subdirectory(CryInput)
add_subdirectory(CryMovie)
add_subdirectory(CryNetwork)
add_subdirectory(CryPhysics)
add_subdirectory(CryScriptSystem)
add_subdirectory(CrySoundSystem)
add_subdirectory(CrySystem)
add_subdirectory(FARCRY)
add_subdirectory(FarCry_WinSV)
add_subdirectory(RenderDll/XRenderD3D9)
add_subdirectory(RenderDll/XRenderNULL)
add_subdirectory(RenderDll/XRenderOGL)
add_subdirectory(ResourceCompiler)
add_subdirectory(ResourceCompilerPC)
endif()
